# K_HEPSIROS

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: const.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs
src/PWA/: serviceWorkerRegistration.ts
src/assets/: settings.tsx
src/components/: anchor.tsx  calendar.tsx  contextMenu.tsx  palette.tsx  userNavbar.tsx
src/components/dialog/: confirmDialog.tsx  formUserDialog.tsx  userDialog.tsx
src/components/setting/: form.tsx  modal.tsx  setting.tsx  sidebar.tsx
src/db/: DBConfig.tsx
src/interface/: calendar.tsx  contextMenu.tsx  database.tsx  dialog.tsx  fetch.tsx  setting.tsx  user.tsx
src/services/: DBManager.tsx  fetchHtml.tsx
src/styles/: main.less  reset.less  styles.less  variables.less
src/styles/components/: calendar.less  setting.less  userNavbar.less
src/styles/components/dialog/: confirmDialog.less  formUserDialog.less  userDialog.less
src/styles/components/setting/: sidebard.less
